grammar.output
Grammar

    0 $accept: programa $end

    1 programa: lista_definicoes

    2 lista_definicoes: definicao
    3                 | definicao lista_definicoes

    4 definicao: def_variavel
    5          | def_funcao

    6 def_variavel: ID ':' tipo ';'

    7 tipo: tipo_primitivo
    8     | tipo '[' ']'

    9 tipo_primitivo: TK_INT
   10               | TK_FLOAT
   11               | TK_CHAR
   12               | TK_VOID

   13 def_funcao: ID '(' parametros ')' ':' tipo bloco

   14 parametros: %empty
   15           | lista_params

   16 lista_params: parametro
   17             | parametro ',' lista_params

   18 parametro: ID ':' tipo

   19 bloco: '{' lista_def_var lista_comandos '}'

   20 lista_def_var: %empty
   21              | lista_def_var lista_def_var2

   22 lista_def_var2: def_variavel

   23 lista_comandos: %empty
   24               | comando lista_comandos

   25 comando: bloco
   26        | '@' expressao ';'
   27        | TK_RETURN expressao ';'
   28        | TK_RETURN ';'
   29        | exp_variavel '=' expressao ';'
   30        | TK_IF expressao bloco
   31        | TK_IF expressao bloco TK_ELSE bloco
   32        | TK_WHILE expressao bloco
   33        | chamada ';'

   34 exp_variavel: ID
   35             | expressao_base '[' expressao ']'

   36 chamada: ID '(' lista_exp ')'

   37 lista_exp: %empty
   38          | lista_exp2

   39 lista_exp2: expressao
   40           | expressao ',' lista_exp2

   41 expressao: exp_or

   42 exp_or: exp_and
   43       | exp_or TK_OR exp_and

   44 exp_and: exp_cmp
   45        | exp_and TK_AND exp_cmp

   46 exp_cmp: exp_add
   47        | exp_cmp TK_EQUAL exp_add
   48        | exp_cmp TK_NOTEQUAL exp_add
   49        | exp_cmp TK_LESSEQUAL exp_add
   50        | exp_cmp TK_GREATEREQUAL exp_add
   51        | exp_cmp '<' exp_add
   52        | exp_cmp '>' exp_add

   53 exp_add: exp_mult
   54        | exp_add '+' exp_mult
   55        | exp_add '-' exp_mult

   56 exp_mult: exp_unaria
   57         | exp_mult '*' exp_unaria
   58         | exp_mult '/' exp_unaria

   59 exp_unaria: exp_as
   60           | '-' exp_unaria
   61           | '!' exp_unaria

   62 exp_as: expressao_base
   63       | expressao_base TK_AS tipo

   64 expressao_base: constante
   65               | exp_variavel
   66               | '(' expressao ')'
   67               | chamada
   68               | TK_NEW tipo '[' expressao ']'

   69 constante: TK_DEC
   70          | TK_REAL
   71          | TK_STRING

   72 ID: TK_ID


Terminals, with rules where they appear

$end (0) 0
'!' (33) 61
'(' (40) 13 36 66
')' (41) 13 36 66
'*' (42) 57
'+' (43) 54
',' (44) 17 40
'-' (45) 55 60
'/' (47) 58
':' (58) 6 13 18
';' (59) 6 26 27 28 29 33
'<' (60) 51
'=' (61) 29
'>' (62) 52
'@' (64) 26
'[' (91) 8 35 68
']' (93) 8 35 68
'{' (123) 19
'}' (125) 19
error (256)
TK_INT (258) 9
TK_FLOAT (259) 10
TK_CHAR (260) 11
TK_VOID (261) 12
TK_NEW (262) 68
TK_IF (263) 30 31
TK_ELSE (264) 31
TK_WHILE (265) 32
TK_AS (266) 63
TK_RETURN (267) 27 28
TK_DEC (268) 69
TK_REAL (269) 70
TK_ID (270) 72
TK_EQUAL (271) 47
TK_NOTEQUAL (272) 48
TK_LESSEQUAL (273) 49
TK_GREATEREQUAL (274) 50
TK_AND (275) 45
TK_OR (276) 43
TK_STRING (277) 71


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
programa (42)
    on left: 1, on right: 0
lista_definicoes (43)
    on left: 2 3, on right: 1 3
definicao (44)
    on left: 4 5, on right: 2 3
def_variavel (45)
    on left: 6, on right: 4 22
tipo (46)
    on left: 7 8, on right: 6 8 13 18 63 68
tipo_primitivo (47)
    on left: 9 10 11 12, on right: 7
def_funcao (48)
    on left: 13, on right: 5
parametros (49)
    on left: 14 15, on right: 13
lista_params (50)
    on left: 16 17, on right: 15 17
parametro (51)
    on left: 18, on right: 16 17
bloco (52)
    on left: 19, on right: 13 25 30 31 32
lista_def_var (53)
    on left: 20 21, on right: 19 21
lista_def_var2 (54)
    on left: 22, on right: 21
lista_comandos (55)
    on left: 23 24, on right: 19 24
comando (56)
    on left: 25 26 27 28 29 30 31 32 33, on right: 24
exp_variavel (57)
    on left: 34 35, on right: 29 65
chamada (58)
    on left: 36, on right: 33 67
lista_exp (59)
    on left: 37 38, on right: 36
lista_exp2 (60)
    on left: 39 40, on right: 38 40
expressao (61)
    on left: 41, on right: 26 27 29 30 31 32 35 39 40 66 68
exp_or (62)
    on left: 42 43, on right: 41 43
exp_and (63)
    on left: 44 45, on right: 42 43 45
exp_cmp (64)
    on left: 46 47 48 49 50 51 52, on right: 44 45 47 48 49 50 51 52
exp_add (65)
    on left: 53 54 55, on right: 46 47 48 49 50 51 52 54 55
exp_mult (66)
    on left: 56 57 58, on right: 53 54 55 57 58
exp_unaria (67)
    on left: 59 60 61, on right: 56 57 58 60 61
exp_as (68)
    on left: 62 63, on right: 59
expressao_base (69)
    on left: 64 65 66 67 68, on right: 35 62 63
constante (70)
    on left: 69 70 71, on right: 64
ID (71)
    on left: 72, on right: 6 13 18 34 36


State 0

    0 $accept: . programa $end

    TK_ID  shift, and go to state 1

    programa          go to state 2
    lista_definicoes  go to state 3
    definicao         go to state 4
    def_variavel      go to state 5
    def_funcao        go to state 6
    ID                go to state 7


State 1

   72 ID: TK_ID .

    $default  reduce using rule 72 (ID)


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 8


State 3

    1 programa: lista_definicoes .

    $default  reduce using rule 1 (programa)


State 4

    2 lista_definicoes: definicao .
    3                 | definicao . lista_definicoes

    TK_ID  shift, and go to state 1

    $default  reduce using rule 2 (lista_definicoes)

    lista_definicoes  go to state 9
    definicao         go to state 4
    def_variavel      go to state 5
    def_funcao        go to state 6
    ID                go to state 7


State 5

    4 definicao: def_variavel .

    $default  reduce using rule 4 (definicao)


State 6

    5 definicao: def_funcao .

    $default  reduce using rule 5 (definicao)


State 7

    6 def_variavel: ID . ':' tipo ';'
   13 def_funcao: ID . '(' parametros ')' ':' tipo bloco

    ':'  shift, and go to state 10
    '('  shift, and go to state 11


State 8

    0 $accept: programa $end .

    $default  accept


State 9

    3 lista_definicoes: definicao lista_definicoes .

    $default  reduce using rule 3 (lista_definicoes)


State 10

    6 def_variavel: ID ':' . tipo ';'

    TK_INT    shift, and go to state 12
    TK_FLOAT  shift, and go to state 13
    TK_CHAR   shift, and go to state 14
    TK_VOID   shift, and go to state 15

    tipo            go to state 16
    tipo_primitivo  go to state 17


State 11

   13 def_funcao: ID '(' . parametros ')' ':' tipo bloco

    TK_ID  shift, and go to state 1

    $default  reduce using rule 14 (parametros)

    parametros    go to state 18
    lista_params  go to state 19
    parametro     go to state 20
    ID            go to state 21


State 12

    9 tipo_primitivo: TK_INT .

    $default  reduce using rule 9 (tipo_primitivo)


State 13

   10 tipo_primitivo: TK_FLOAT .

    $default  reduce using rule 10 (tipo_primitivo)


State 14

   11 tipo_primitivo: TK_CHAR .

    $default  reduce using rule 11 (tipo_primitivo)


State 15

   12 tipo_primitivo: TK_VOID .

    $default  reduce using rule 12 (tipo_primitivo)


State 16

    6 def_variavel: ID ':' tipo . ';'
    8 tipo: tipo . '[' ']'

    ';'  shift, and go to state 22
    '['  shift, and go to state 23


State 17

    7 tipo: tipo_primitivo .

    $default  reduce using rule 7 (tipo)


State 18

   13 def_funcao: ID '(' parametros . ')' ':' tipo bloco

    ')'  shift, and go to state 24


State 19

   15 parametros: lista_params .

    $default  reduce using rule 15 (parametros)


State 20

   16 lista_params: parametro .
   17             | parametro . ',' lista_params

    ','  shift, and go to state 25

    $default  reduce using rule 16 (lista_params)


State 21

   18 parametro: ID . ':' tipo

    ':'  shift, and go to state 26


State 22

    6 def_variavel: ID ':' tipo ';' .

    $default  reduce using rule 6 (def_variavel)


State 23

    8 tipo: tipo '[' . ']'

    ']'  shift, and go to state 27


State 24

   13 def_funcao: ID '(' parametros ')' . ':' tipo bloco

    ':'  shift, and go to state 28


State 25

   17 lista_params: parametro ',' . lista_params

    TK_ID  shift, and go to state 1

    lista_params  go to state 29
    parametro     go to state 20
    ID            go to state 21


State 26

   18 parametro: ID ':' . tipo

    TK_INT    shift, and go to state 12
    TK_FLOAT  shift, and go to state 13
    TK_CHAR   shift, and go to state 14
    TK_VOID   shift, and go to state 15

    tipo            go to state 30
    tipo_primitivo  go to state 17


State 27

    8 tipo: tipo '[' ']' .

    $default  reduce using rule 8 (tipo)


State 28

   13 def_funcao: ID '(' parametros ')' ':' . tipo bloco

    TK_INT    shift, and go to state 12
    TK_FLOAT  shift, and go to state 13
    TK_CHAR   shift, and go to state 14
    TK_VOID   shift, and go to state 15

    tipo            go to state 31
    tipo_primitivo  go to state 17


State 29

   17 lista_params: parametro ',' lista_params .

    $default  reduce using rule 17 (lista_params)


State 30

    8 tipo: tipo . '[' ']'
   18 parametro: ID ':' tipo .

    '['  shift, and go to state 23

    $default  reduce using rule 18 (parametro)


State 31

    8 tipo: tipo . '[' ']'
   13 def_funcao: ID '(' parametros ')' ':' tipo . bloco

    '['  shift, and go to state 23
    '{'  shift, and go to state 32

    bloco  go to state 33


State 32

   19 bloco: '{' . lista_def_var lista_comandos '}'

    $default  reduce using rule 20 (lista_def_var)

    lista_def_var  go to state 34


State 33

   13 def_funcao: ID '(' parametros ')' ':' tipo bloco .

    $default  reduce using rule 13 (def_funcao)


State 34

   19 bloco: '{' lista_def_var . lista_comandos '}'
   21 lista_def_var: lista_def_var . lista_def_var2

    TK_NEW     shift, and go to state 35
    TK_IF      shift, and go to state 36
    TK_WHILE   shift, and go to state 37
    TK_RETURN  shift, and go to state 38
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '{'        shift, and go to state 32
    '@'        shift, and go to state 43

    $default  reduce using rule 23 (lista_comandos)

    def_variavel    go to state 44
    bloco           go to state 45
    lista_def_var2  go to state 46
    lista_comandos  go to state 47
    comando         go to state 48
    exp_variavel    go to state 49
    chamada         go to state 50
    expressao_base  go to state 51
    constante       go to state 52
    ID              go to state 53


State 35

   68 expressao_base: TK_NEW . tipo '[' expressao ']'

    TK_INT    shift, and go to state 12
    TK_FLOAT  shift, and go to state 13
    TK_CHAR   shift, and go to state 14
    TK_VOID   shift, and go to state 15

    tipo            go to state 54
    tipo_primitivo  go to state 17


State 36

   30 comando: TK_IF . expressao bloco
   31        | TK_IF . expressao bloco TK_ELSE bloco

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    expressao       go to state 59
    exp_or          go to state 60
    exp_and         go to state 61
    exp_cmp         go to state 62
    exp_add         go to state 63
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 37

   32 comando: TK_WHILE . expressao bloco

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    expressao       go to state 69
    exp_or          go to state 60
    exp_and         go to state 61
    exp_cmp         go to state 62
    exp_add         go to state 63
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 38

   27 comando: TK_RETURN . expressao ';'
   28        | TK_RETURN . ';'

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    ';'        shift, and go to state 70
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    expressao       go to state 71
    exp_or          go to state 60
    exp_and         go to state 61
    exp_cmp         go to state 62
    exp_add         go to state 63
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 39

   69 constante: TK_DEC .

    $default  reduce using rule 69 (constante)


State 40

   70 constante: TK_REAL .

    $default  reduce using rule 70 (constante)


State 41

   71 constante: TK_STRING .

    $default  reduce using rule 71 (constante)


State 42

   66 expressao_base: '(' . expressao ')'

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    expressao       go to state 72
    exp_or          go to state 60
    exp_and         go to state 61
    exp_cmp         go to state 62
    exp_add         go to state 63
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 43

   26 comando: '@' . expressao ';'

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    expressao       go to state 73
    exp_or          go to state 60
    exp_and         go to state 61
    exp_cmp         go to state 62
    exp_add         go to state 63
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 44

   22 lista_def_var2: def_variavel .

    $default  reduce using rule 22 (lista_def_var2)


State 45

   25 comando: bloco .

    $default  reduce using rule 25 (comando)


State 46

   21 lista_def_var: lista_def_var lista_def_var2 .

    $default  reduce using rule 21 (lista_def_var)


State 47

   19 bloco: '{' lista_def_var lista_comandos . '}'

    '}'  shift, and go to state 74


State 48

   24 lista_comandos: comando . lista_comandos

    TK_NEW     shift, and go to state 35
    TK_IF      shift, and go to state 36
    TK_WHILE   shift, and go to state 37
    TK_RETURN  shift, and go to state 38
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '{'        shift, and go to state 32
    '@'        shift, and go to state 43

    $default  reduce using rule 23 (lista_comandos)

    bloco           go to state 45
    lista_comandos  go to state 75
    comando         go to state 48
    exp_variavel    go to state 49
    chamada         go to state 50
    expressao_base  go to state 51
    constante       go to state 52
    ID              go to state 68


State 49

   29 comando: exp_variavel . '=' expressao ';'
   65 expressao_base: exp_variavel .

    '='  shift, and go to state 76

    $default  reduce using rule 65 (expressao_base)


State 50

   33 comando: chamada . ';'
   67 expressao_base: chamada .

    ';'  shift, and go to state 77

    $default  reduce using rule 67 (expressao_base)


State 51

   35 exp_variavel: expressao_base . '[' expressao ']'

    '['  shift, and go to state 78


State 52

   64 expressao_base: constante .

    $default  reduce using rule 64 (expressao_base)


State 53

    6 def_variavel: ID . ':' tipo ';'
   34 exp_variavel: ID .
   36 chamada: ID . '(' lista_exp ')'

    ':'  shift, and go to state 10
    '('  shift, and go to state 79

    $default  reduce using rule 34 (exp_variavel)


State 54

    8 tipo: tipo . '[' ']'
   68 expressao_base: TK_NEW tipo . '[' expressao ']'

    '['  shift, and go to state 80


State 55

   60 exp_unaria: '-' . exp_unaria

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    exp_unaria      go to state 81
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 56

   61 exp_unaria: '!' . exp_unaria

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    exp_unaria      go to state 82
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 57

   65 expressao_base: exp_variavel .

    $default  reduce using rule 65 (expressao_base)


State 58

   67 expressao_base: chamada .

    $default  reduce using rule 67 (expressao_base)


State 59

   30 comando: TK_IF expressao . bloco
   31        | TK_IF expressao . bloco TK_ELSE bloco

    '{'  shift, and go to state 32

    bloco  go to state 83


State 60

   41 expressao: exp_or .
   43 exp_or: exp_or . TK_OR exp_and

    TK_OR  shift, and go to state 84

    $default  reduce using rule 41 (expressao)


State 61

   42 exp_or: exp_and .
   45 exp_and: exp_and . TK_AND exp_cmp

    TK_AND  shift, and go to state 85

    $default  reduce using rule 42 (exp_or)


State 62

   44 exp_and: exp_cmp .
   47 exp_cmp: exp_cmp . TK_EQUAL exp_add
   48        | exp_cmp . TK_NOTEQUAL exp_add
   49        | exp_cmp . TK_LESSEQUAL exp_add
   50        | exp_cmp . TK_GREATEREQUAL exp_add
   51        | exp_cmp . '<' exp_add
   52        | exp_cmp . '>' exp_add

    TK_EQUAL         shift, and go to state 86
    TK_NOTEQUAL      shift, and go to state 87
    TK_LESSEQUAL     shift, and go to state 88
    TK_GREATEREQUAL  shift, and go to state 89
    '<'              shift, and go to state 90
    '>'              shift, and go to state 91

    $default  reduce using rule 44 (exp_and)


State 63

   46 exp_cmp: exp_add .
   54 exp_add: exp_add . '+' exp_mult
   55        | exp_add . '-' exp_mult

    '+'  shift, and go to state 92
    '-'  shift, and go to state 93

    $default  reduce using rule 46 (exp_cmp)


State 64

   53 exp_add: exp_mult .
   57 exp_mult: exp_mult . '*' exp_unaria
   58         | exp_mult . '/' exp_unaria

    '*'  shift, and go to state 94
    '/'  shift, and go to state 95

    $default  reduce using rule 53 (exp_add)


State 65

   56 exp_mult: exp_unaria .

    $default  reduce using rule 56 (exp_mult)


State 66

   59 exp_unaria: exp_as .

    $default  reduce using rule 59 (exp_unaria)


State 67

   35 exp_variavel: expressao_base . '[' expressao ']'
   62 exp_as: expressao_base .
   63       | expressao_base . TK_AS tipo

    TK_AS  shift, and go to state 96
    '['    shift, and go to state 78

    $default  reduce using rule 62 (exp_as)


State 68

   34 exp_variavel: ID .
   36 chamada: ID . '(' lista_exp ')'

    '('  shift, and go to state 79

    $default  reduce using rule 34 (exp_variavel)


State 69

   32 comando: TK_WHILE expressao . bloco

    '{'  shift, and go to state 32

    bloco  go to state 97


State 70

   28 comando: TK_RETURN ';' .

    $default  reduce using rule 28 (comando)


State 71

   27 comando: TK_RETURN expressao . ';'

    ';'  shift, and go to state 98


State 72

   66 expressao_base: '(' expressao . ')'

    ')'  shift, and go to state 99


State 73

   26 comando: '@' expressao . ';'

    ';'  shift, and go to state 100


State 74

   19 bloco: '{' lista_def_var lista_comandos '}' .

    $default  reduce using rule 19 (bloco)


State 75

   24 lista_comandos: comando lista_comandos .

    $default  reduce using rule 24 (lista_comandos)


State 76

   29 comando: exp_variavel '=' . expressao ';'

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    expressao       go to state 101
    exp_or          go to state 60
    exp_and         go to state 61
    exp_cmp         go to state 62
    exp_add         go to state 63
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 77

   33 comando: chamada ';' .

    $default  reduce using rule 33 (comando)


State 78

   35 exp_variavel: expressao_base '[' . expressao ']'

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    expressao       go to state 102
    exp_or          go to state 60
    exp_and         go to state 61
    exp_cmp         go to state 62
    exp_add         go to state 63
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 79

   36 chamada: ID '(' . lista_exp ')'

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    $default  reduce using rule 37 (lista_exp)

    exp_variavel    go to state 57
    chamada         go to state 58
    lista_exp       go to state 103
    lista_exp2      go to state 104
    expressao       go to state 105
    exp_or          go to state 60
    exp_and         go to state 61
    exp_cmp         go to state 62
    exp_add         go to state 63
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 80

    8 tipo: tipo '[' . ']'
   68 expressao_base: TK_NEW tipo '[' . expressao ']'

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    ']'        shift, and go to state 27
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    expressao       go to state 106
    exp_or          go to state 60
    exp_and         go to state 61
    exp_cmp         go to state 62
    exp_add         go to state 63
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 81

   60 exp_unaria: '-' exp_unaria .

    $default  reduce using rule 60 (exp_unaria)


State 82

   61 exp_unaria: '!' exp_unaria .

    $default  reduce using rule 61 (exp_unaria)


State 83

   30 comando: TK_IF expressao bloco .
   31        | TK_IF expressao bloco . TK_ELSE bloco

    TK_ELSE  shift, and go to state 107

    $default  reduce using rule 30 (comando)


State 84

   43 exp_or: exp_or TK_OR . exp_and

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    exp_and         go to state 108
    exp_cmp         go to state 62
    exp_add         go to state 63
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 85

   45 exp_and: exp_and TK_AND . exp_cmp

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    exp_cmp         go to state 109
    exp_add         go to state 63
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 86

   47 exp_cmp: exp_cmp TK_EQUAL . exp_add

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    exp_add         go to state 110
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 87

   48 exp_cmp: exp_cmp TK_NOTEQUAL . exp_add

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    exp_add         go to state 111
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 88

   49 exp_cmp: exp_cmp TK_LESSEQUAL . exp_add

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    exp_add         go to state 112
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 89

   50 exp_cmp: exp_cmp TK_GREATEREQUAL . exp_add

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    exp_add         go to state 113
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 90

   51 exp_cmp: exp_cmp '<' . exp_add

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    exp_add         go to state 114
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 91

   52 exp_cmp: exp_cmp '>' . exp_add

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    exp_add         go to state 115
    exp_mult        go to state 64
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 92

   54 exp_add: exp_add '+' . exp_mult

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    exp_mult        go to state 116
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 93

   55 exp_add: exp_add '-' . exp_mult

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    exp_mult        go to state 117
    exp_unaria      go to state 65
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 94

   57 exp_mult: exp_mult '*' . exp_unaria

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56

    exp_variavel    go to state 57
    chamada         go to state 58
    exp_unaria      go to state 118
    exp_as          go to state 66
    expressao_base  go to state 67
    constante       go to state 52
    ID              go to state 68


State 95

   58 exp_mult: exp_mult '/' . exp_unaria

    TK_NEW     shift, and go to state 35
    TK_DEC     shift, and go to state 39
    TK_REAL    shift, and go to state 40
    TK_ID      shift, and go to state 1
    TK_STRING  shift, and go to state 41
    '('        shift, and go to state 42
    '-'        shift, and go to state 55
    '!'        shift, and go to state 56
